# ai_girls

./: .gitignore  Cargo.toml  README.md
sarah-tauri/: Cargo.toml  tauri.conf.json
sarah-tauri/icons/: icon.icns
sarah-tauri/src/: ai_adapters.rs  avatar_runtime.rs  macos_integration.rs  main.rs  orchestrator.rs  persona_system.rs  state_model.rs  tool_runtime.rs  voice_pipeline.rs
sarah-ui/: app.js  index.html  styles.css
