[package]
name = "sarah-tauri"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
path = "src/main.rs"
name = "sarah-tauri"

[features]
# Required by `cargo tauri build` — DO NOT REMOVE
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
async-trait.workspace = true
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tauri = { version = "1", features = [ "shell-execute", "shell-open", "fs-read-file"] }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true

[lints]
workspace = true
